# qt6-demo

./: .gitignore  CMakeLists.txt  README.md  images.qrc  main.cpp  wininfo.h
